src/objects/BGBK__Fund2__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Code__c</fullName>
        <label>Agency Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Total_Balance__c</fullName>
        <description>Total balance for the GL.</description>
        <label>Total Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Cash_CC_and_ACH__c</fullName>
        <label>GL Cash (CC and ACH)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Cash_Cash_and_Check__c</fullName>
        <label>GL Cash(Cash and Check)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Revenue__c</fullName>
        <label>GL Revenue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof_ID__c</fullName>
        <label>Prof ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fund</label>
    <listViews>
        <fullName>BGBK__All</fullName>
        <columns>NAME</columns>
        <columns>BGBK__Description__c</columns>
        <columns>BGBK__Total_Balance__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>